--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "projeto13-batepapo-uol-api",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "Naomi Gonçalves (setsukanaomi)",
@@ -15,7 +17,11 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "mongodb": "^5.6.0"
   }
 }
